--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
+    "prepare": "husky",
     "build": "tsc --project tsconfig.json",
     "build:watch": "tsc --watch --project tsconfig.json",
     "dev": "tsx watch src/index.ts",
@@ -40,6 +41,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
+    "husky": "^9.1.3",
+    "lint-staged": "^15.2.7",
     "@eslint/js": "^9.35.0",
     "@types/node": "^24.5.1",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
