fix(property-index,cli): 恢复并实现属性倒排索引内存版；修复 CLI 异常模板字符串与日志类型；通过 ESLint 与构建\n\n- 恢复 src/storage/propertyIndex.ts 并实现 MemoryPropertyIndex/PropertyIndexManager\n- 修复 src/cli/auto_compact.ts 日志参数类型与未使用变量\n- 修复 src/cli/readers.ts 与 src/cli/stats.ts 的未知错误字符串化\n- 对齐 docs/todo/ 路线图中的属性索引实现方向

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "db:auto-compact": "tsx src/cli/auto_compact.ts",
     "db:gc": "tsx src/cli/gc.ts",
     "db:hot": "tsx src/cli/hot.ts",
+    "db:readers": "tsx src/cli/readers.ts",
     "db:repair-page": "tsx src/cli/repair_page.ts"
   },
   "bin": {
