chore: 运行全部测试并提交当前变更\n\n- 测试结果：327 通过，1 占位用例跳过（性能大规模插入）\n- 已执行 docs:tree 更新目录树（.agents/rules/base.md）\n- 未发现失败用例；后续可按需开启占位性能测试

--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     "bench:insert-scan": "node benchmarks/insert_scan.mjs",
     "bench:path-agg": "node benchmarks/path_agg.mjs",
     "perf:smoke": "node benchmarks/insert_scan.mjs 2000 && node benchmarks/path_agg.mjs",
+    "benchmark": "tsx src/cli/benchmark.ts run",
+    "benchmark:core": "tsx src/cli/benchmark.ts core",
+    "benchmark:search": "tsx src/cli/benchmark.ts search",
+    "benchmark:graph": "tsx src/cli/benchmark.ts graph",
+    "benchmark:spatial": "tsx src/cli/benchmark.ts spatial",
+    "benchmark:regression": "tsx src/cli/benchmark.ts regression",
+    "benchmark:memory": "tsx src/cli/benchmark.ts memory-leak",
     "db:auto-compact": "tsx src/cli/auto_compact.ts",
     "db:gc": "tsx src/cli/gc.ts",
     "db:hot": "tsx src/cli/hot.ts",
@@ -62,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "commander": "^12.1.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
