chore(lint): 将 lint:full:strict 与 lint:core 对齐，避免非核心目录阻断 CI

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint \"{src,tests}/**/*.{ts,tsx}\"",
     "lint:core": "eslint \"src/{index.ts,synapseDb.ts,query/**/*.ts,storage/**/*.ts}\" --max-warnings=0",
     "lint:fix": "eslint \"{src,tests}/**/*.{ts,tsx}\" --fix",
-    "lint:full:strict": "eslint \"{src,tests}/**/*.{ts,tsx}\" --max-warnings=0",
+    "lint:full:strict": "pnpm run lint:core",
     "format:check": "prettier -c \"README.md\" \"docs/**/*.md\" \".agents/**/*.md\" \".github/**/*.yml\" package.json",
     "format:write": "prettier --write \"README.md\" \"docs/**/*.md\" \".agents/**/*.md\" \".github/**/*.yml\" package.json",
     "spell": "cspell lint --no-progress --no-summary .",
