--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:perf": "vitest run --reporter=dot --include 'tests/**/*performance*.test.ts'",
     "typecheck": "tsc --noEmit",
     "ci": "pnpm typecheck && pnpm lint:core && pnpm test && pnpm build",
-    "ci:prepush": "pnpm typecheck && pnpm lint:core && pnpm test && pnpm build",
+    "ci:prepush": "pnpm typecheck && pnpm lint:core && pnpm test:coverage && pnpm build",
     "db:check": "tsx src/cli/check.ts check",
     "db:repair": "tsx src/cli/check.ts repair",
     "db:compact": "tsx src/cli/compact.ts",
