--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,30 +2,31 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
-  test-and-coverage:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x] # 锁定一个版本以保证一致性
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          package_json_file: package.json
-          run_install: false
+          version: 10
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -33,44 +34,14 @@ jobs:
       - name: Typecheck
         run: pnpm typecheck
 
-      - name: Lint (core, blocking)
-        run: pnpm lint:core
+      - name: Lint
+        run: pnpm lint
 
-      - name: Lint (full, blocking)
-        run: pnpm lint:full:strict
-
-      - name: Format check (Prettier)
+      - name: Format check
         run: pnpm format:check
 
-      - name: Test (coverage)
+      - name: Test with coverage
         run: pnpm test:coverage
 
       - name: Build
         run: pnpm build
-
-  performance-benchmark:
-    runs-on: ubuntu-latest
-    needs: test-and-coverage
-    strategy:
-      matrix:
-        node-version: [20.x]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          package_json_file: package.json
-          run_install: false
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Run performance tests (no coverage)
-        run: pnpm test:perf
