--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -40,6 +47,9 @@ jobs:
         run: pnpm format:check
 
       - name: Test with coverage
+        env:
+          NODE_OPTIONS: --max-old-space-size=8192
+          VITEST_COVERAGE: '1'
         run: pnpm test:coverage
 
       - name: Build
