feat(query-lazy): - follow() 真·流式扩展（基于 streamFactRecords），前沿节点与边去重、顺序稳定 - Lazy.variablePathStream(): 变长路径流式 BFS（min..max、NODE/EDGE 唯一性） - Lazy.variablePath() 保持同步 API；内部不再物化上游全集（新增流式版本供大图使用）
fix(snapshot): withSnapshot() 中 find() 回退即刻物化，保持快照视图稳定

tests: 新增 lazy_variable_path_stream 用例

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:coverage": "node -e \"require('fs').mkdirSync('coverage/.tmp', { recursive: true })\" && VITEST_COVERAGE=1 vitest run --coverage --exclude 'tests/**/*performance*.test.ts'",
     "test:perf": "vitest run --reporter=dot --include 'tests/**/*performance*.test.ts'",
     "typecheck": "tsc --noEmit",
-    "ci": "pnpm typecheck && pnpm lint && pnpm test:coverage && pnpm build",
+    "ci": "pnpm typecheck && pnpm lint && pnpm test:coverage && pnpm build && pnpm bench:baseline",
     "test:ci-seq": "VITEST_COVERAGE=1 vitest run --coverage --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/unit && VITEST_COVERAGE=1 vitest run --coverage --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/integration && VITEST_COVERAGE=1 vitest run --coverage --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/system",
     "test:ci-seq-no-cov": "NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/unit/storage && NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/unit/query && NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/unit/graph && NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/unit/connection && NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/integration && NODE_OPTIONS='--max-old-space-size=8192' pnpm exec vitest run --reporter=dot --exclude 'tests/**/*performance*.test.ts' tests/system",
     "ci:prepush": "pnpm typecheck && pnpm lint:core && NODE_OPTIONS='--max-old-space-size=8192' pnpm test:ci-seq-no-cov && pnpm build",
@@ -38,6 +38,7 @@
     "bench:basic": "node benchmarks/basic.mjs",
     "bench:insert-scan": "node benchmarks/insert_scan.mjs",
     "bench:path-agg": "node benchmarks/path_agg.mjs",
+    "bench:baseline": "pnpm build && node benchmarks/quick.mjs",
     "perf:smoke": "node benchmarks/insert_scan.mjs 2000 && node benchmarks/path_agg.mjs",
     "benchmark": "tsx src/cli/benchmark.ts run",
     "benchmark:core": "tsx src/cli/benchmark.ts core",
