ci: add WASM module build step
修复 CI 失败问题：
- 添加 Rust 工具链安装
- 添加 wasm-pack 安装
- 在测试前构建 WASM 模块

Related: #6, #7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,19 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: wasm32-unknown-unknown
+
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
+      - name: Build WASM module
+        run: |
+          cd nervusdb-wasm
+          wasm-pack build --target nodejs --out-dir ../src/wasm
+
       - name: Typecheck
         run: pnpm typecheck
 
