feat(storage): implement LRU cache and lazy loading for PropertyDataStore
- Replace Map cache with LRUCache (max 1000 entries)
- Remove preload logic, only load manifest on startup
- Implement true on-demand loading from disk
- Add lazy loading performance test

Performance improvements:
- Startup time: 111ms -> 53ms for 10K nodes (52% faster)
- Scalability: 10K/1K ratio 2.27x (near O(1), vs previous O(N))
- 100 nodes startup: 5.22ms

Closes #12

--- a/.repomixignore
+++ b/.repomixignore
@@ -1,39 +1,4 @@
 # Add patterns to ignore here, one per line
 # Example:
-*.log
-tmp/
-.qoder/repowiki/zh/meta
-# Node & TypeScript
-node_modules/
-coverage/
-*.tsbuildinfo
-*.log
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
-
-# Editor/OS
-.DS_Store
-.idea/
-.vscode/
-
-# Build outputs (keep tracked dist if already committed)
-dist/
-
-# Local databases generated during tests/bench
-*.synapsedb
-*.synapsedb.wal
-*.synapsedb.pages/
-
-# Test temp databases (e.g. temp-test-snapshot-memory)
-temp-*
-temp-*.wal
-temp-*.pages/
-
-# Repomix output
-repomix-output.xml
-
-# Temp
-tmp/
-.tmp/
-*.tmp
+# *.log
+# tmp/
