--- a/repomix.config.json
+++ b/repomix.config.json
@@ -4,8 +4,8 @@
     "maxFileSize": 52428800
   },
   "output": {
-    "filePath": "repomix-output.xml",
-    "style": "xml",
+    "filePath": "repomix-output.md",
+    "style": "markdown",
     "parsableStyle": false,
     "fileSummary": true,
     "directoryStructure": true,
