--- a/package.json
+++ b/package.json
@@ -111,5 +111,8 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.0",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "lru-cache": "^11.2.2"
   }
 }
