--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "bench:path-agg": "node benchmarks/path_agg.mjs",
     "bench:baseline": "pnpm build && node benchmarks/quick.mjs",
     "perf:smoke": "node benchmarks/insert_scan.mjs 2000 && node benchmarks/path_agg.mjs",
-    "build:native": "pnpm exec @napi-rs/cli build --directory native/nervusdb-node --release",
+    "build:native": "pnpm exec napi build --release --cargo-cwd native/nervusdb-node native/nervusdb-node/npm",
     "benchmark": "tsx src/cli/benchmark.ts run",
     "benchmark:core": "tsx src/cli/benchmark.ts core",
     "benchmark:search": "tsx src/cli/benchmark.ts search",
