--- a/native/nervusdb-node/Cargo.toml
+++ b/native/nervusdb-node/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 napi = { version = "2.15.0", features = ["napi4"] }
 napi-derive = "2.15.0"
 nervusdb-core = { path = "../../nervusdb-core" }
+serde_json = "1.0"
 
 [build-dependencies]
 napi-build = "2.0.1"
