--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,10 @@ jobs:
       - name: Build
         run: pnpm build
 
+      - name: Security audit
+        run: |
+          pnpm audit --prod --audit-level=high || echo "::warning::Found security vulnerabilities, please review"
+
       - name: Assert no tmp synapsedb leftovers
         run: |
           set -euo pipefail
