docs(T7-T9): align decisions for algo/CI/temporal

--- a/bindings/node/native/nervusdb-node/Cargo.toml
+++ b/bindings/node/native/nervusdb-node/Cargo.toml
@@ -12,5 +12,9 @@ napi-derive = "2.15.0"
 nervusdb-core = { path = "../../../../nervusdb-core" }
 serde_json = "1.0"
 
+[features]
+default = []
+temporal = ["nervusdb-core/temporal"]
+
 [build-dependencies]
 napi-build = "2.0.1"
