--- a/nervusdb-core/Cargo.toml
+++ b/nervusdb-core/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 time = { version = "0.3", features = ["formatting", "parsing"] }
 flexbuffers = "2.0"  # Zero-copy property serialization (10x faster than JSON)
-rmp-serde = "1.3"  # MessagePack serialization for Temporal Store v2 (supports serde_json::Value)
+rmp-serde = { version = "1.3", optional = true } # MessagePack serialization for Temporal Store v2
 clap = { version = "4.5", features = ["derive"], optional = true }  # CLI for migration tool
 indicatif = { version = "0.17", optional = true }  # Progress bars for migration
 
@@ -29,8 +29,14 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 [features]
 default = []
 migration-cli = ["clap", "indicatif"]
+temporal = ["dep:rmp-serde"]
 
 [[bin]]
 name = "nervus-migrate"
 path = "src/bin/nervus-migrate.rs"
 required-features = ["migration-cli"]
+
+[[example]]
+name = "bench_temporal"
+path = "examples/bench_temporal.rs"
+required-features = ["temporal"]
