chore(license): align licensing metadata
Fixes inconsistent license declarations across Rust/Node/Python and replaces the repo LICENSE with verbatim AGPL-3.0.

Also removes tracked agent symlinks that pointed to a private local file and ignores them going forward.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ bindings/python/nervusdb-py/target/
 .DS_Store
 Thumbs.db
 .agents/rules/base.md
+AGENTS.md
+CLAUDE.md
+GEMINI.md
 
 # IDE
 .vscode/
