--- a/bindings/node/package.json
+++ b/bindings/node/package.json
@@ -66,8 +66,8 @@
     "typescript",
     "embedded-database"
   ],
-  "author": "",
-  "license": "Apache-2.0",
+  "author": "LuQing Studio",
+  "license": "AGPL-3.0-only",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LuQing-Studio/nervusdb.git"
