--- a/bindings/python/nervusdb-py/pyproject.toml
+++ b/bindings/python/nervusdb-py/pyproject.toml
@@ -6,14 +6,16 @@ build-backend = "maturin"
 name = "nervusdb"
 version = "1.0.0"
 description = "Python bindings for NervusDB"
-authors = [{ name = "NervusDB" }]
+authors = [{ name = "LuQing Studio" }]
 requires-python = ">=3.8"
+license = { text = "AGPL-3.0-only" }
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Rust",
     "Operating System :: OS Independent",
+    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPL)"
 ]
 
 [tool.maturin]
