--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "nervusdb-core",
+    "nervusdb-temporal",
     "bindings/node/native/nervusdb-node",
     "bindings/python/nervusdb-py"
 ]
