--- a/nervusdb-core/Cargo.toml
+++ b/nervusdb-core/Cargo.toml
@@ -19,9 +19,9 @@ serde_json = "1.0"
 sha2 = "0.10"
 time = { version = "0.3", features = ["formatting", "parsing"] }
 flexbuffers = "2.0"  # Zero-copy property serialization (10x faster than JSON)
-rmp-serde = { version = "1.3", optional = true } # MessagePack serialization for Temporal Store v2
 clap = { version = "4.5", features = ["derive"], optional = true }  # CLI for migration tool
 indicatif = { version = "0.17", optional = true }  # Progress bars for migration
+nervusdb-temporal = { path = "../nervusdb-temporal", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 redb = "3.1.0"
@@ -34,7 +34,7 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 [features]
 default = []
 migration-cli = ["clap", "indicatif"]
-temporal = ["dep:rmp-serde"]
+temporal = ["dep:nervusdb-temporal"]
 
 [[bin]]
 name = "nervus-migrate"
