feat(T20): add varint-keys feature flag and storage benchmark
- Add 'varint-keys' feature flag for future integration
- Add bench_storage_size_comparison test showing ~2.7x compression
- Theoretical: 24 bytes -> ~9 bytes average per triple key

--- a/nervusdb-core/Cargo.toml
+++ b/nervusdb-core/Cargo.toml
@@ -35,6 +35,7 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 default = []
 migration-cli = ["clap", "indicatif"]
 temporal = ["dep:nervusdb-temporal"]
+varint-keys = []  # Use compressed varint keys for triple storage (experimental)
 
 [[bin]]
 name = "nervus-migrate"
