--- a/bindings/node/native/nervusdb-node/Cargo.toml
+++ b/bindings/node/native/nervusdb-node/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0"
 [features]
 default = []
 temporal = ["nervusdb-core/temporal"]
+vector = ["nervusdb-core/vector"]
+fts = ["nervusdb-core/fts"]
 
 [build-dependencies]
 napi-build = "2.0.1"
