--- a/bindings/python/nervusdb-py/Cargo.toml
+++ b/bindings/python/nervusdb-py/Cargo.toml
@@ -18,3 +18,6 @@ serde_json = "1"
 
 [features]
 default = []
+temporal = ["nervusdb-core/temporal"]
+vector = ["nervusdb-core/vector"]
+fts = ["nervusdb-core/fts"]
