--- a/nervusdb-core/Cargo.toml
+++ b/nervusdb-core/Cargo.toml
@@ -26,7 +26,7 @@ nervusdb-temporal = { path = "../nervusdb-temporal", optional = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 redb = "3.1.0"
 lru = "0.16.2"
-usearch = { version = "2.22.0", optional = true }
+usearch = { version = "2.22.0", optional = true, default-features = false }
 tantivy = { version = "0.25.0", optional = true }
 half = { version = "2.7.1", optional = true }
 
