feat(T38): make Node StatementHandle truly streaming

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,9 @@ jobs:
       - name: Typecheck
         run: pnpm -C bindings/node typecheck
 
+      - name: Contract check
+        run: pnpm -C bindings/node check:contract
+
       - name: Build native addon
         run: pnpm -C bindings/node build:native
 
