--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ members = [
     "bindings/node/native/nervusdb-node",
     "bindings/uniffi/nervusdb-uniffi",
     "nervusdb-cli"
-]
+, "nervusdb-v2-storage"]
 resolver = "2"
