--- a/nervusdb-v2-query/Cargo.toml
+++ b/nervusdb-v2-query/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-
+nervusdb-v2-api = { path = "../nervusdb-v2-api" }
