feat(docs): Polish RustDocs for v2 (T64)
- Added crate-level Quickstart and Core Concepts documentation
- Updated Cargo.toml metadata (keywords, categories, description)
- Updated tasks.md

Refs: #T64

--- a/nervusdb-v2/Cargo.toml
+++ b/nervusdb-v2/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "nervusdb-v2"
 version = "0.1.0"
+license = "AGPL-3.0-only"
+description = "NervusDB: The SQLite of Graph Databases for Rust. (Facade)"
+readme = "../README.md"
+keywords = ["graph", "database", "embedded", "cypher", "sqlite"]
+categories = ["database", "embedded", "data-structures"]
+repository = "https://github.com/LuQing-Studio/nervusdb"
 edition = "2021"
 
 [dependencies]
