--- a/nervusdb-v2-storage/Cargo.toml
+++ b/nervusdb-v2-storage/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 crc32fast = "1.5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "2.0"
+uuid = { version = "1.0", features = ["v4", "serde"] }
 nervusdb-v2-api = { path = "../nervusdb-v2-api" }
 
 [dev-dependencies]
