feat(T201): Add Python binding via pyo3
- Implement Db class with query(), begin_write(), close()
- Implement WriteTxn class with query(), commit(), rollback()
- Implement Value type conversion (Rust <-> Python)
- Configure maturin build system (pyproject.toml)
- Add integration test (tests/test_basic.py)

Refs: #T201

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "nervusdb-cli",
+    "nervusdb-pyo3",
     "nervusdb-v2",
     "nervusdb-v2-api",
     "nervusdb-v2-query",
