--- a/nervusdb-v2-storage/Cargo.toml
+++ b/nervusdb-v2-storage/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0"
 thiserror = "2.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 nervusdb-v2-api = "=2.0.0"
+rand = "0.8"
+ordered-float = "5.0"
 
 [dev-dependencies]
 tempfile = "3"
