--- a/nervusdb-v2/Cargo.toml
+++ b/nervusdb-v2/Cargo.toml
@@ -14,6 +14,11 @@ edition = "2024"
 nervusdb-v2-api = "=2.0.0"
 nervusdb-v2-storage = "=2.0.0"
 nervusdb-v2-query = "=2.0.0"
+clap = { version = "4.5.53", features = ["derive"] }
+csv = "1.4.0"
+serde = "1.0.228"
+serde_json = "1.0.148"
+anyhow = "1.0.100"
 
 [dev-dependencies]
 tempfile = "3"
