--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,9 @@ nervusdb-v2-api = { path = "nervusdb-v2-api" }
 nervusdb-v2-storage = { path = "nervusdb-v2-storage" }
 nervusdb-v2-query = { path = "nervusdb-v2-query" }
 nervusdb-v2 = { path = "nervusdb-v2" }
+
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
+
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
