feat(roadmap): 完成 M4/M5/Industrial 全量收尾并归档过时文档 (#109)
* feat(docs): 完善项目规范文档体系

## 新增文档
- 新增 docs/PROJECT_SPECIFICATION.md (9.2k)
  项目最高规范文档，整合所有项目信息
  - 1. 项目概览和定位
  - 2. 当前状态 (M4 阶段, TCK 5%→70%)
  - 3. 技术规范 (代码/提交/文档)
  - 4. 开发流程 (TDD + 质量门禁)
  - 5. 里程碑计划 (M3→M4→M5→v1.0)
  - 6. FAQ 和参考文献

- 新增 docs/QUICK_REFERENCE.md (2.5k)
  快速参考指南
  - 常用开发命令速查
  - API 使用示例 (Rust/Python/CLI)
  - 当前状态仪表板
  - 关键文档链接

- 新增 docs/DOCUMENTATION_MAP.md (4.9k)
  文档导航图
  - 文档层次结构
  - 按需求推荐阅读路径
  - 文档状态追踪
  - 更新流程指南

## 更新
- 更新 README.md 指向新项目规范

## 问题解决
✅ 解决"看不懂 AI 在干嘛"问题
✅ 统一项目文档到单一真实源
✅ 明确当前状态和开发流程
✅ 提供清晰的文档导航

Refs: #T326 (文档整理)
Spec Compliance: docs/PROJECT_SPECIFICATION.md

* feat(T326): Integrate openCypher TCK Harness

[TDD Verification]
- TCK harness: nervusdb-v2/tests/tck_harness.rs
- Fuzz tests: nervusdb-v2/tests/fuzz_cypher.rs
- Merge tests: nervusdb-v2/tests/merge_test.rs

[Description]
- Add openCypher TCK as git submodule for compliance testing
- Implement cucumber-based TCK test harness
- Add proptest-based Cypher fuzzer for parser/executor validation
- Fix NotImplemented cases in query_api.rs (16 occurrences)
- Fix NotImplemented cases in executor.rs (11 occurrences)
- Upgrade Python binding output model for Node/Rel/Path values
- Add ROADMAP.md and cypher_compatibility_v2.md spec
- Update tasks.md with M4/M5 milestones progress
- Remove deprecated prettier config files

[Meta]
Refs: #T326, #T327, #T328

* feat(roadmap): 完成 M4/M5/Industrial 全量收尾

[Description]
- 完成 TCK 分层门禁（tier0/1/2 PR 阻塞 + tier3 nightly）与失败聚类流程
- 完成 PyO3 + N-API 绑定收口，补齐 Node 运行时 smoke 与跨语言契约快测
- 新增 benchmark/concurrency/hnsw/chaos/soak/fuzz 工业脚本与 nightly workflows
- 对 docs 全量对齐：tasks/roadmap/done 全部 Done，归档过时文档到 docs/archive

[TDD Verification]
- make pre-commit
- bash scripts/tck_tier_gate.sh tier0
- bash scripts/tck_tier_gate.sh tier1
- bash scripts/tck_tier_gate.sh tier2
- bash scripts/binding_smoke.sh
- bash scripts/contract_smoke.sh
- BENCH_NODES=1000 BENCH_ITERS=20 bash scripts/benchmark_compare.sh

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,28 @@ jobs:
       - name: Clippy
         run: cargo clippy --workspace --exclude nervusdb-pyo3 --all-targets -- -W warnings
 
-      - name: Run tests
-        run: cargo test --workspace --exclude nervusdb-pyo3
+      - name: TCK Tier-0 (smoke)
+        if: runner.os == 'Linux'
+        run: make tck-tier0
+
+      - name: TCK Tier-1 (clauses whitelist)
+        if: runner.os == 'Linux'
+        run: make tck-tier1
+
+      - name: TCK Tier-2 (expressions whitelist)
+        if: runner.os == 'Linux'
+        run: make tck-tier2
+
+      - name: Binding smoke (Python + Node scaffold)
+        if: runner.os == 'Linux'
+        run: bash scripts/binding_smoke.sh
+
+      - name: Cross-language contract smoke
+        if: runner.os == 'Linux'
+        run: bash scripts/contract_smoke.sh
+
+      - name: Run workspace quick tests
+        run: bash scripts/workspace_quick_test.sh
 
       - name: Build release
         run: cargo build --workspace --exclude nervusdb-pyo3 --release
