chore(pyo3): 消除 gil-refs cfg 噪音并更新闭环风险

--- a/nervusdb-pyo3/Cargo.toml
+++ b/nervusdb-pyo3/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "nervusdb"
 crate-type = ["cdylib"]
 
+[features]
+default = []
+gil-refs = []
+
 [dependencies]
 pyo3 = { version = "0.22.6", features = ["extension-module"] }
 nervusdb = { path = "../nervusdb" }
