BETA-04/W13: close R14 and start strict stability Day1 (#135)
* fix(runtime): guard UNWIND expression evaluation

* fix(runtime): guard write-path expression evaluation

* fix(runtime): guard foreach and delete expression evaluation

* docs(progress): record r14-w4 tier1/tier2 gate evidence

* fix(runtime): guard create property expression evaluation

* fix(runtime): guard call argument expression evaluation

* docs(progress): record r14-w6 call-guard evidence

* fix(runtime): guard aggregate expression evaluation

* docs(progress): record r14-w7 aggregate-guard evidence

* test(runtime): lock index-seek invalid argument semantics

* docs(progress): record r14-w8 index-seek audit evidence

* test(runtime): lock percentile invalid argument semantics

* docs(progress): record r14-w9 percentile audit evidence

* fix(runtime): guard index-seek expression evaluation

* docs(progress): record r14-w10 index-seek guard evidence

* chore(audit): add runtime guard audit script

* docs(progress): record r14-w11 runtime guard audit evidence

* fix(runtime): guard delete overlay target collection

* docs(progress): record r14-w12 audit hotspot fix evidence

* docs: add project completion scorecard (2026-02-14)

* chore(audit): harden runtime guard audit cli and exit semantics

* ci(guard): enforce runtime guard hotspot gate in CI

* feat(stability): add strict 7-day stability window collector and release gate

* fix(runtime): allow duration maps in list property conversion

* docs(progress): close R14-W13 and start BETA-04 day1 tracking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Clippy
         run: cargo clippy --workspace --exclude nervusdb-pyo3 --all-targets -- -W warnings
 
+      - name: Runtime guard hotspot audit
+        run: bash scripts/runtime_guard_audit.sh --fail-on-hotspot
+
       - name: TCK Tier-0 (smoke)
         if: runner.os == 'Linux'
         run: make tck-tier0
