--- a/.github/workflows/fuzz-nightly.yml
+++ b/.github/workflows/fuzz-nightly.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run fuzz target (query_parse)
         run: |
           cd fuzz
-          cargo +nightly fuzz run query_parse -- -max_total_time=240
+          cargo +nightly fuzz run query_parse -- -max_total_time=240 -max_len=2048 -rss_limit_mb=4096
 
       - name: Run fuzz target (query_execute)
         run: |
