--- a/.github/workflows/fuzz-nightly.yml
+++ b/.github/workflows/fuzz-nightly.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run fuzz target (query_prepare)
         run: |
           cd fuzz
-          cargo +nightly fuzz run query_prepare -- -max_total_time=240 -max_len=1024 -rss_limit_mb=4096
+          cargo +nightly fuzz run query_prepare -- -max_total_time=240 -max_len=256 -timeout=10 -rss_limit_mb=4096
 
       - name: Run fuzz target (query_parse)
         run: |
