--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,13 @@ tck_results.txt
 
 # Local generated artifacts
 artifacts/
+
+# Local integration examples (generated files)
+examples/ts-local/node_modules/
+examples/ts-local/dist/
+examples/ts-local/native/
+examples/py-local/.venv/
+examples/py-local/__pycache__/
+
+# Local scratch playgrounds
+eaamples-test/
