feat(bindings): 三端 API 对齐并接入 parity 阻断门禁 (#145)
* chore(git): ignore local example artifacts and scratch workspace

* chore(examples-test): track capability harness and ignore generated artifacts

* feat(bindings): align node/python APIs and add parity gate

* chore(lint): resolve clippy warnings across query/storage

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,10 @@ tck_results.txt
 
 # Local generated artifacts
 artifacts/
+
+# Local integration examples (generated files)
+examples/ts-local/node_modules/
+examples/ts-local/dist/
+examples/ts-local/native/
+examples/py-local/.venv/
+examples/py-local/__pycache__/
