feat(P0-ABI-01): stabilize C ABI v1 and migrate thin bindings
[Description]

- Introduce nervusdb-capi as the single stable public C ABI surface

- Migrate Node and Python bindings to thin C ABI adapters

- Add official C SDK scaffold and C smoke capability test

- Extend parity gates to strict 4-language alignment (Rust/Node/Python/C)

- Add CI thin-binding dependency gate to block direct business-crate coupling

[TDD Verification]

- bash examples-test/run_all.sh

- bash scripts/parity_softgate_audit.sh

- bash scripts/parity_coverage_audit.sh

- bash scripts/binding_parity_gate.sh

- cargo fmt --all -- --check

- cargo clippy --workspace --exclude nervusdb-pyo3 --all-targets -- -W warnings

[Meta]

Refs: #P0-ABI-01

Spec Compliance: docs/spec.md

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Clippy
         run: cargo clippy --workspace --exclude nervusdb-pyo3 --all-targets -- -W warnings
 
+      - name: ABI thin-binding dependency gate
+        run: bash scripts/abi_binding_dep_gate.sh
+
       - name: Runtime guard hotspot audit
         run: bash scripts/runtime_guard_audit.sh --fail-on-hotspot
 
@@ -80,7 +83,7 @@ jobs:
         if: runner.os == 'Linux'
         run: bash scripts/parity_coverage_audit.sh
 
-      - name: Binding parity gate (Rust/Node/Python)
+      - name: Binding parity gate (Rust/Node/Python/C)
         if: runner.os == 'Linux'
         run: bash scripts/binding_parity_gate.sh
 
