--- a/nervusdb-node/Cargo.toml
+++ b/nervusdb-node/Cargo.toml
@@ -10,8 +10,7 @@ crate-type = ["cdylib"]
 napi = { version = "2", default-features = false, features = ["napi6", "serde-json"] }
 napi-derive = "2"
 serde_json = "1"
-nervusdb = { path = "../nervusdb" }
-nervusdb-query = { path = "../nervusdb-query" }
+nervusdb_capi = { package = "nervusdb-capi", path = "../nervusdb-capi" }
 
 [build-dependencies]
 napi-build = "2"
